minor fix to keep text under mini-search from wrapping

--- a/arxiv/base/static/sass/_custom.sass
+++ b/arxiv/base/static/sass/_custom.sass
@@ -108,6 +108,9 @@ main
     margin-top: .5em
     margin-bottom: .25em
 
+.mini-search .help
+  white-space: nowrap
+
 .logo
   height: 45px
   margin: .2em
